# keypath

./: .gitignore  Cargo.toml  README.md  sketch.rs
keypath/: Cargo.toml
keypath-derive/: Cargo.toml
keypath-derive/src/: attr.rs  keyable.rs  keypath.rs  lib.rs  shared.rs
keypath-derive/tests/: basic.rs  keypath.rs
keypath-proc-macros/: Cargo.toml
keypath-proc-macros/src/: attr.rs  keyable.rs  keypath.rs  keypath_parse.rs  lib.rs  shared.rs
keypath-proc-macros/tests/: run.rs
keypath-proc-macros/tests/keypath/: basic_structs.rs  generic.rs  generic_const_fail.rs  generic_const_fail.stderr  illegal_index.rs  illegal_index.stderr  illegal_period.rs  illegal_period.stderr  illegal_spaces.rs  illegal_spaces.stderr  invalid_path_syntax.rs  invalid_path_syntax.stderr
keypath/src/: error.rs  impls.rs  internals.rs  json_keypath.rs  lib.rs  lib2.rs  lib3.rs  newstart.rs  newstart_index.rs  value.rs
keypath/tests/: basic.rs  collections.rs  derive-types.rs  generics.rs  keypath_basic.rs  less_basic.rs  tuple_struct.rs
