[package]
name = "keypath-derive"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
edition = "2018"

[lib]
#name = "keypath_derive"
proc-macro = true

[dependencies]
syn = "1.0.39"
quote = "1.0"
proc-macro2 = "1.0"
litrs = "0.2.3"

[dev-dependencies]
keypath = { version = "0.1.0", path = "../keypath" }
