[package]
name = "keypath-proc-macros"
version = "0.2.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
description = "proc macros for the keypath crate"
repository = "https://github.com/cmyr/keypath"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/run.rs"

[dependencies]
syn = "1.0.39"
quote = "1.0"
proc-macro2 = "1.0"
litrs = "0.2.3"

[dev-dependencies]
keypath = { version = "0.2.0", path = "../keypath" }
trybuild = { version = "1.0", features = ["diff"] }
