[package]
name = "keypath"
version = "0.2.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
edition = "2018"
license = "Apache-2.0"
description = "Derivable, type-safe Swift-style keypaths."
repository = "https://github.com/cmyr/keypath"
readme = "../README.md"

[dependencies]
keypath-proc-macros = { version = "0.2.0", path = "../keypath-proc-macros" }


